data/derived/comb/progs/unify/prog5736.ml.out
Characters 82-84:
  let f a x = a ^ sl t in
                  ^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
